# rcj2025_Nagoya

./: CMakeLists.txt
main/: CMakeLists.txt  os6_pico2_Nagoya.c  os6_pico2_Nagoya.h  test.c
